--- a/styling.css
+++ b/styling.css
@@ -66,10 +66,16 @@ body{
     height: 100%;
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    
 }
 
+.members-rone-cover{
+    flex: 33.33%;
+    border: 2px solid black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
 #team-rtwo{
     width: 100%;
     border: 2px solid black;
@@ -91,6 +97,8 @@ body{
     height: 100%;
     margin-left: 5%;
     margin-right: 5%;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .members-rtwo{
@@ -105,7 +113,7 @@ body{
     margin-right: auto;
     margin-left: auto;
     border: 2px solid black;
-    height: 100%;
+    
 }
 
 .member-name{
@@ -150,6 +158,8 @@ body{
     border: 2px solid black;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .inner-section{
@@ -166,4 +176,24 @@ body{
     #cover-rtwo{
         width: 100%;
     }
+}
+
+@media only screen and (max-width: 1100px){
+    #cover-rone{
+        flex-direction: column;
+    }
+    #cover-rtwo{
+        flex-direction: column;
+    }
+    .members-rone{
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+.inner-sec-cover{
+    margin-right: auto;
+    margin-left: auto;
+    border: 2px solid black;
+    width: 250px;
 }
